# Step-Audio-2-mini

./: .gitignore  COLAB_INFERENCE.md  EVALUATION_REPORT.md  H100_EVAL_RUNBOOK.md  LICENSE  README.md  accelerate_config.yaml  config.yaml  data_prep.py  deepspeed_zero3.json  eval.py  eval_advanced_metrics.py  eval_cascade.py  inference_example.py  pyproject.toml  requirements.txt  requirements_blaser_constraints.txt  requirements_blaser_eval.txt  requirements_h100_eval.txt  streaming_vllm_example.py  train.py  translate_hf_audio.py
configs/: h100_nvl_fast_deepspeed.yaml
scripts/: check_h100_eval_env.py  download_test_audio_samples.py  install_h100_eval_extras.sh  merge_lora.py  push_full_model_to_hub.py  push_to_hub.py  setup_blaser_env.sh  setup_h100_eval_env.sh  synthesize_cascade_tts.py  synthesize_eval_audio.py
src/stepaudio_luganda/: __init__.py  audio.py  constants.py  data.py  formatting.py  modeling.py  paths.py  torchcodec_compat.py
