[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stepaudio2-luganda-s2st"
version = "0.1.0"
description = "LoRA SFT pipeline for Step-Audio 2 mini Luganda-to-English speech-to-speech translation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
